generalize output file handling, use spawn()

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rauschma/stringio": "^1.4.0",
     "mkdirp": "^2.1.5",
     "nodejs-mobile-gyp": "^0.3.1",
-    "nodejs-mobile-react-native": "^16.17.6"
+    "nodejs-mobile-react-native": "^16.17.6",
+    "rimraf": "^4.4.0"
   }
 }
