--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "prebuild-for-nodejs-mobile",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "CLI tool to compile node.js native modules for mobile",
   "bin": "bin.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "author": "Andre 'Staltz' Medeiros <contact@staltz.com>",
+  "license": "MIT",
   "dependencies": {
     "@rauschma/stringio": "^1.4.0",
     "mkdirp": "^2.1.5",
