--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "prebuild-for-nodejs-mobile",
   "version": "1.1.0",
   "description": "CLI tool to compile node.js native modules for mobile",
-  "bin": "bin.js",
   "author": "Andre 'Staltz' Medeiros <contact@staltz.com>",
   "license": "MIT",
+  "bin": "bin.js",
+  "files": [
+    "bin.js"
+  ],
   "dependencies": {
     "@iarna/toml": "2.2.5",
     "@rauschma/stringio": "^1.4.0",
@@ -12,5 +15,12 @@
     "nodejs-mobile-gyp": "^0.3.1",
     "nodejs-mobile-react-native": "^16.17.6",
     "rimraf": "^4.4.0"
+  },
+  "devDependencies": {
+    "tap-arc": "^0.3.5",
+    "tape": "^5.6.3"
+  },
+  "scripts": {
+    "test": "tape test/*.test.js | tap-arc"
   }
 }
