--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "tap-arc": "^0.3.5",
-    "tape": "^5.6.3"
+    "tape": "^5.6.3",
+    "typescript": "~5.2.2"
   },
   "scripts": {
     "test": "tape test/*.test.js | tap-arc"
